Chapter2/1.7/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-2-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output-2
  template:
    metadata:
      labels:
        app: log-output-2
    spec:
      containers:
        - name: log-output-2-cont
          image: carlossss1011/log-output-2
