Chapter2/1.7/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-2-svc
spec:
  type: NodePort
  selector:
    app: log-output-2
  ports:
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 1234
      targetPort: 3000
